[package]
name = "kdtrees"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
macroquad = "0.4.13"
rayon = "1.10.0"
itertools = "0.14.0"
rand = "0.9.0"
kdtree = "0.7.0"

[profile.release]
debug = true
# For MAXIMUM PERFORMANCE:
#force-frame-pointers = true
#opt-level = 3
#lto = "fat"        # More aggressive link-time optimization
#codegen-units = 1  # Better optimizations, but slower compile
#panic = "abort"    # Removes unwinding, reduces binary size
